--- a/config/train/davae.yaml
+++ b/config/train/davae.yaml
@@ -1,41 +1,27 @@
 main:
     random_seed: 0
-    saved_dir: '/home/tungi/conferencing/saved/train'
+    saved_dir: '/home/tungi/cvae_avatar/saved/tmp'
 
 dataset:
-    name: 'DAVAEDataset'
+    name: 'MFINDDataset'
     kwargs:
-        base_dir: '/home/tungi/datasets/MF_subset'
-        resolution: 512
-        view_range: 15
-        view_dist: 280
-        degree_per_view: 2
+        base_dir: '/home/tungi/datasets/mf_individuals/'
+        size: 1024
         debug: true
             
 dataloader:
-    name: 'ImageLoader'
+    name: 'VanillaDataLoader'
     kwargs:
         train_batch_size: 4
         valid_batch_size: 1
         shuffle: true
-        num_workers: 0
+        num_workers: 8
 
 net:
     name: 'DeepAppearanceVAE'
     kwargs:
-        tex_size: 512
+        tex_size: 1024
         
-losses:
-    - name: 'MeshLoss'
-      weight: 1.0
-    - name: 'ScreenLoss'
-      weight: 1.0
-    - name: 'KLLoss'
-      weight: 1e-2
-
-metrics:
-    - name: 'PSNR'
-    - name: 'SSIM'
 
 optimizer:
     name: 'Adam'
@@ -67,4 +53,4 @@ trainer:
     name: 'DAVAETrainer'
     kwargs:
         device: 'cuda:0'
-        num_epochs: 64
+        num_epochs: 48
