--- a/config/train/davae.yaml
+++ b/config/train/davae.yaml
@@ -7,12 +7,12 @@ dataset:
     kwargs:
         base_dir: '/datasets/mf_individuals'
         tex_size: 1024
-        debug: true
+        debug: false
             
 dataloader:
     name: 'VanillaDataLoader'
     kwargs:
-        train_batch_size: 4
+        train_batch_size: 6
         valid_batch_size: 1
         shuffle: true
         num_workers: 8
