--- a/config/test/one_cam.yaml
+++ b/config/test/one_cam.yaml
@@ -1,12 +1,12 @@
 main:
     random_seed: 0
-    saved_dir: './output'
-    loaded_path: './saved/davae/checkpoints/model_best.pth'
+    saved_dir: '/home/tungi/cvae_avatar/output'
+    loaded_path: './saved/davae/checkpoints/model_32.pth'
 
 dataset:
     name: 'InferDataset'
     kwargs:
-        base_dir: '/datasets/mf_individuals'
+        base_dir: '/home/tungi/datasets/mf_individuals'
         tex_size: 1024
             
 dataloader:
